[feat] Main screen -Add MainScreenActivity -Add value file dimens.xml -Make changes in splash screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SplitPersonality</string>
+    <string name="title_activity_main_screen">MainScreenActivity</string>
 </resources>
